k8s/companies/vic/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: kagoo-app
          image: mcdocker643/erp-kagoo:v0.1 # à changer erp-kagoo - kagoo-os
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
