k8s/companies/vic/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - vic.kagoo.io
  rules:
    - host: vic.kagoo.io
